--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
+package_dir =
+    =src
 packages = find:
 zip_safe = False
 setup_requires = setuptools_scm
