--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ description = Method variant decorator
 keywords =
     varmeth
     decorator
+    method variant
 url = https://github.com/digitronik/varmeth
 long_description = file: README.md
 long_description_content_type = text/markdown
