--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,7 @@ jobs:
           python -m pip install pip --upgrade
           pip install nox
           nox -s tests
+          nox -s coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1.0.6
