moving from digitronik to RedHatQE

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ keywords =
     varmeth
     decorator
     method variant
-url = https://github.com/digitronik/varmeth
+url = https://github.com/RedHatQE/varmeth
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
