--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,13 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout to master
-        uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Setup python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.x'
           architecture: 'x64'
 
       - name: Pre-Commit Checks
@@ -35,11 +35,11 @@ jobs:
       matrix:
         python-version: [ 'pypy3', '3.6', '3.7', '3.8' ]
     steps:
-      - name: Checkout to master
-        uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Setup Python-${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
@@ -52,7 +52,7 @@ jobs:
           nox -s coverage
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1.0.6
+        uses: codecov/codecov-action@v1.3.1
         with:
           file: coverage.xml
           flags: unittests
@@ -67,13 +67,13 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
-      - name: Checkout to master
-        uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Setup python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.x'
           architecture: 'x64'
 
       - name: Development setup and smoke test on platform ${{ matrix.os }}
@@ -87,13 +87,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ unit-tests]
     steps:
-      - name: Checkout to master
-        uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Setup python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.x'
           architecture: 'x64'
 
       - name: Twine checks
