--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,27 @@
 repos:
 - repo: https://github.com/asottile/reorder_python_imports
-  rev: v2.1.0
+  rev: v3.12.0
   hooks:
   - id: reorder-python-imports
     language_version: python3
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.1.0
+  rev: v3.15.0
   hooks:
   - id: pyupgrade
     language_version: python3
 - repo: https://github.com/psf/black
-  rev: 19.10b0
+  rev: 23.12.1
   hooks:
   - id: black
-    args: [--safe, --quiet, --line-length, "100"]
+    args: [--safe, --quiet]
     language_version: python3
-    require_serial: true
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.7.9
+- repo: https://github.com/pycqa/flake8
+  rev: 7.0.0
   hooks:
   - id: flake8
     language_version: python3
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.5.0
+  rev: v4.5.0
   hooks:
   - id: trailing-whitespace
     language_version: python3
