--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,22 +14,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
           architecture: 'x64'
 
       - name: Build Package and Check
         run: |
-          python -m pip install --upgrade setuptools wheel twine
-          python setup.py sdist bdist_wheel
+          python -m pip install --upgrade wheel twine
+          python pip wheel --no-deps -w dist .
           python -m twine check dist/*
 
       - name: Deploy to PyPi
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@1.8.11
         with:
           user: __token__
           password: ${{ secrets.pypi_varmeth }}
