--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Build Package and Check
         run: |
           python -m pip install --upgrade wheel twine
-          python pip wheel --no-deps -w dist .
+          python -m pip wheel --no-deps -w dist .
           python -m twine check dist/*
 
       - name: Deploy to PyPi
-        uses: pypa/gh-action-pypi-publish@1.8.11
+        uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
           user: __token__
           password: ${{ secrets.pypi_varmeth }}
